[project]
name = "vidtoolz-compose"
version = "0.1.0"
description = "Compose video"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-compose"
Changelog = "https://github.com/sukhbinder/vidtoolz-compose/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-compose/issues"
CI = "https://github.com/sukhbinder/vidtoolz-compose/actions"

[project.entry-points."vidtoolz_plugins"]
compose = "vidtoolz_compose:compose_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
